fixed padding for herocap too wide

--- a/typo.css
+++ b/typo.css
@@ -1117,6 +1117,7 @@ iframe {
 
   .heroCap {
     flex-direction: column; /* Arrange items vertically */
+    padding: 0.5em;
   }
 
 
